--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_auth: ^3.3.7
   awesome_dialog: ^2.1.1
   flutter_svg: ^0.22.0
+  camera: ^0.9.0
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/model.tflite
+    - assets/labels.txt
     - assets/images/
     - assets/icons/
 
