--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^0.22.0
   camera: ^0.9.0
   tflite: ^1.1.2
+  google_maps_flutter: ^2.0.9
 
 dev_dependencies:
   flutter_test:
