--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   camera: ^0.9.0
   tflite: ^1.1.2
   google_maps_flutter: ^2.0.9
+  cloud_firestore: ^3.1.11
 
 dev_dependencies:
   flutter_test:
