--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   tflite: ^1.1.2
   google_maps_flutter: ^2.0.9
   cloud_firestore: ^3.1.11
+  logger: ^1.1.0
+  responsive_framework: ^0.1.7
 
 dev_dependencies:
   flutter_test:
